config,yml: add headline generation

--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ version: 1.0
 description: "A friendly AI assistant"
 news_summary_prompt:
   version: 0.0
-  file: 'news_summary_v0.txt'
+  file: 'news_summary_v1.txt'
 user_news:
   version: 0.0
   file: 'user_news_v0.txt'
@@ -13,5 +13,8 @@ image_prompt_generation_prompt:
 user_prompt_generation_prompt:
   version: 0.0
   file: 'user_prompt_generation_v0.txt'
+headline_generation_prompt:
+  version: 0.0
+  file: 'headline_generation_v0.txt'
 regions: ['Porto Alegre', 'Viamão']
 # regions: ['Porto Alegre', 'Viamão', 'Alvorada', 'Cachoeirinha', 'São Leopoldo', 'Gramado', 'Canela', 'Carlos Barbosa', 'Pelotas', 'São Jorge']
