--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
